Add option endpoint to all paths and return cors headers
