# lambdas/contract/api-contract.yaml
@@ -511,13 +511,6 @@ paths:
         uri: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${apiAuthHandlerArn}/invocations"
         credentials: "${apiGatewayRoleArn}"
         payloadFormatVersion: "1.0"
-        responses:
-          default:
-            statusCode: 200
-            responseParameters:
-              method.response.header.Access-Control-Allow-Headers: "'*'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-              method.response.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
       requestBody:
         required: true
         content:
@@ -541,16 +534,6 @@ paths:
       responses:
         '200':
           description: Successful response
-          headers:
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
   /user/{userId}/predictions:
     get:
       tags:
